--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,6 +1,19 @@
 <% @articles.each do |article| %>
-<h2><%= link_to article.title, article_path(article) %></h2>
-<p><%= article.content %></p>
+
+  <div>
+    <% if article.read %>
+      <input type="checkbox" checked>
+    <% else %>
+      <input type="checkbox">
+    <% end %>
+
+    <h2><%= link_to article.title, article_path(article) %></h2>
+    <%= link_to "Delete", article_path(article), method: :delete, data: { confirm: "Are you sure?" } %>
+  </div>
+
 <% end %>
 
-<%= link_to "New Article", new_article_path %>
+<div>
+  <%= link_to "New Article", new_article_path %>
+</div>
+
